# sub-pool-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  sync-from-upstream.yml
examples/: codex_hello.py  hello.py
meta/: README.md  pyproject.toml
sub_pool_client/: __init__.py  _cli_core.py  _cli_provider.py  _health_watcher.py  _shared.py  _swap.py  cli.py  cli_claude.py  cli_codex.py  client.py  codex.py  errors.py
