[project]
name = "sub-pool-client"
dynamic = ["version"]
description = "Python client + `sp-claude` / `sp-codex` CLIs for a sub-pool credential broker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.115",
    "httpx>=0.27",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/subs-pool/sub-pool-client"
Repository = "https://github.com/subs-pool/sub-pool-client"

[project.scripts]
sp-claude = "sub_pool_client.cli_claude:main"
sp-codex = "sub_pool_client.cli_codex:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Mirror is a standalone repo — let hatch-vcs read this mirror's own
# git tags, no `root = ".."` indirection like the monorepo.
source = "vcs"
raw-options = { version_scheme = "guess-next-dev", local_scheme = "node-and-date", fallback_version = "0.0.0+nogit" }

[tool.hatch.build.hooks.vcs]
version-file = "sub_pool_client/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["sub_pool_client"]
